# gcp-line-developper

./: .gitignore  README.md
.github/workflows/: github-actions.yml
api/: Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
api/src/: gemini.py  util.py
script/: .gitignore  README.md  gettoken.py  keygen.py  pyproject.toml
terraform/module/cloud_run/: main.tf  output.tf  variable.tf
terraform/module/workload_identity/: main.tf  output.tf
terraform/prod/: main.tf
