[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "google-genai>=1.13.0",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.1",
    "line-bot-sdk>=3.17.1",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.2",
]
